헤더 다운로드버튼 변경

--- a/src/components/character/characterCss/CharacterVisual.scss
+++ b/src/components/character/characterCss/CharacterVisual.scss
@@ -198,6 +198,9 @@
         outline: 0;
         direction: ltr;
         max-height: 130px;
+        p {
+            margin-bottom: 0;
+        }
         div {
             width: 455px;
             text-align: left;
