사진 및 동영상 파일 링크로 교체

--- a/src/components/character/characterCss/CharacterVisual.scss
+++ b/src/components/character/characterCss/CharacterVisual.scss
@@ -56,7 +56,7 @@
     content: '';
     width: 154vh;
     height: 52vh;
-    background: url('../../assets/img/character/character_pattern2.png') center no-repeat;
+    background: url('https://genshin.mihoyo.com/_nuxt/img/f43c391.png') center no-repeat;
     background-size: 154vh 52vh;
 }
 .character-info {
